# telesearch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7059debc9316_initial_schema.py
docs/: v2-platform-design.md
telesearch/: __init__.py  cli.py  config.py  models.py
telesearch/graph/: __init__.py  build.py  g3.py
telesearch/index/: __init__.py  base.py  build.py  embeddings.py  store.py
telesearch/ingest/: __init__.py  base.py  generic.py  json_chat.py  registry.py  telegram_parser.py  whatsapp.py
telesearch/media/: __init__.py  asr.py  captioner.py  decode_pool.py  documents.py  video.py
telesearch/search/: __init__.py  multi.py  rag.py  reranker.py  retriever.py
telesearch/server/: __init__.py  app.py  audit.py  auth.py  blobs.py  config.py  db.py  deps.py  models.py  queue.py  schemas.py
telesearch/server/routers/: auth.py  global_search.py  graph.py  guides.py  jobs.py  metrics.py  oidc.py  presets.py  search.py  sources.py  uploads.py  workspaces.py
telesearch/server/static/: app.js  index.html  styles.css
telesearch/service/: __init__.py  context.py  indexing.py  search.py
telesearch/ui/: __init__.py  app.py
tests/: conftest.py  test_blobs.py  test_build_robustness.py  test_context.py  test_documents.py  test_fanout.py  test_g3.py  test_graph.py  test_ingest_registry.py  test_migrations.py  test_parser.py  test_phase2_parsers.py  test_reranker.py  test_server_api.py  test_server_phase2.py  test_server_phase3.py  test_server_phase4.py  test_service.py  test_store.py
