[project]
name = "telesearch"
version = "0.1.0"
description = "Local multimodal AI search over large Telegram conversations (text, images, video) using open-weight models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "lancedb>=0.13.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=3.0.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.40.0",
    "python-dateutil>=2.9.0",
    # Process pool with per-task timeouts so a hung media decode (e.g. a corrupt
    # image in PIL) can be killed instead of permanently wedging a worker.
    "pebble>=5.0.0",
]

[project.optional-dependencies]
# Audio transcription of voice messages / video audio tracks.
asr = ["faster-whisper>=1.0.0"]
# Frame extraction from videos (also needs the ffmpeg binary installed on the system).
video = ["av>=12.0.0"]
# Optional Streamlit web UI.
ui = ["streamlit>=1.36.0"]
# Text extraction from PDF / Office documents.
documents = [
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
]
# Multi-user HTTP service: REST API, auth, persistence and background jobs.
# Portable defaults (SQLite + local blob storage + in-process worker) need only
# these; Postgres/S3 backends are enabled via configuration (extra packages).
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    # Knowledge-graph clustering/labelling/layout (HDBSCAN needs sklearn>=1.3).
    # UMAP (umap-learn) is an optional layout upgrade; PCA is the fallback.
    "scikit-learn>=1.3.0",
]
# Optional production backends (not required for the portable defaults).
s3 = ["boto3>=1.34.0"]
encryption = ["cryptography>=41.0.0"]
redis = ["redis>=5.0.0"]
all = [
    "faster-whisper>=1.0.0",
    "av>=12.0.0",
    "streamlit>=1.36.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
telesearch = "telesearch.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["telesearch*"]
